New functions:
* Added S3-`print`-method for `mwu()`-function.
* `get_model_pval()` to return a tidy data frame (tibble) of model term names, p-values and standard errors from various regression model types.
* `se_ybar()` to compute standard error of sample mean for mixed models, considering the effect of clustering on the standard error.

Changes to functions:
* `se` now also computes the standard error for intraclass correlation coefficients, as returned by the `icc()`-function.
* `std_beta()` now always returns a tidy data frame (tibble) with model term names, standardized estimate, standard error and confidence intervals.
* `r2()` now also computes alternative omega-squared-statistics, if null model is given.

Version 0.4.0
------------------------------------------------------------------------------
New functions:
* `inequ_trend` to calculate proportional change of absolute and relative inequalities between two status groups for a vector of given prevalence rates.

Changes to functions:
* `bootstrap` is now much more memory efficient due to use of pointers.
* `boot_ci`, `boot_se` and `boot_p` now accept multiple variables as input.
* `resp_val` now also applies to models fitted with `nlme::lme`.

Version 0.3.0
------------------------------------------------------------------------------
General:
* Removed non-necessary checks for package-availability.

New functions:
* `bootstrap()` to generate bootstrap replicates of data frames.
* `boot_ci()` to compute confidence intervals from bootstrapped values.
* `pred_vars()` to get the names of predictor variables from fitted models.
* `resp_var()` to get the name of the response variable from fitted models.
* `resp_val()` to get the values of the response vector from fitted models.

Version 0.2.0
------------------------------------------------------------------------------
New functions:
* Added functions `weight()` and `weight2()` to weight vectors.