@@ -14,6 +14,7 @@ export(boot_ci)
 export(boot_p)
 export(boot_se)
 export(bootstrap)
+export(center)
 export(chisq_gof)
 export(cod)
 export(converge_ok)
@@ -46,6 +47,7 @@ export(rse)
 export(se)
 export(se_ybar)
 export(smpsize_lmm)
+export(std)
 export(std_beta)
 export(table_values)
 export(weight)
@@ -73,6 +75,7 @@ importFrom(sjmisc,get_label)
 importFrom(sjmisc,get_labels)
 importFrom(sjmisc,is_empty)
 importFrom(sjmisc,recode_to)
+importFrom(sjmisc,set_label)
 importFrom(sjmisc,str_contains)
 importFrom(sjmisc,to_value)
 importFrom(stats,aov)
