@@ -125,8 +125,6 @@ icc <- function(x, ...) {
       icc_[[length(icc_) + 1]] <- icc.lme4(params_[[i]], dot.names[i])
     }
     names(icc_) <- NULL
-    # add class attribute
-    # class(icc_) <- c(class(icc_), "icc.lme4.list")
   }
   return(icc_)
 }
