@@ -5,6 +5,7 @@
 * Added S3-`print`-method for `mwu()`-function.
 * `get_model_pval()` to return a tidy data frame (tibble) of model term names, p-values and standard errors from various regression model types.
 * `se_ybar()` to compute standard error of sample mean for mixed models, considering the effect of clustering on the standard error.
+* `std()` and `center()` to standardize and center variables, supporting the pipe-operator.
 
 ## Changes to functions
 
